Further manual and README updates.

--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -676,12 +676,11 @@ archivePrefix = "arXiv",
    address = {New York, NY, USA},
 }
 
-@inproceedings{krylov2008metrized,
-  title={Metrized Small World Properties Based Data Structure.},
-  author={Krylov, Vladimir and Logvinov, Andrey and Ponomarenko, Alexander and Ponomarev, Dmitry},
-  booktitle={SEDE},
-  pages={203--208},
-  year={2008}
+@misc{Ponomarenko2011,
+  title={Approximate Nearest Neighbor Search Small World Approach},
+  author={Ponomarenko, Alexander and Malkov, Yury and Logvinov, Andrey and and Krylov, Vladimir },
+  note = {Available at {\url{http://www.iiis.org/CDs2011/CD2011IDI/ICTA_2011/Abstract.asp?myurl=CT175ON.pdf}}},
+  year={2011}
 }
 
 @inproceedings{SilpaAnan2008OptimisedKF,
