--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2927,9 +2927,8 @@ until it cannot find a point closer than already found \ttt{efSearch} closest to
 The number of sub-searches is defined by the parameter \ttt{initSearchAttempts}.
 
 Empirically, it was shown that this method often creates a navigable small world graph, where most nodes are separated by only a few edges (roughly logarithmic in terms of the overall number of objects) \cite{malkov2012scalable}.
-A simpler and less efficient variant of this algorithm was presented at SEDE 2008 \cite{krylov2008metrized}.
-It was subsequently improved in two steps with results appearing in SISAP 2012 proceedings \cite{malkov2012scalable}
-and in an Information Systems publication \cite{malkov2014}, respectively.
+A simpler and less efficient variant of this algorithm was presented at ICTA 2011 and SISAP 2012 \cite{Ponomarenko2011,malkov2012scalable}.
+An improved variant appeared as an Information Systems publication \cite{malkov2014}.
 In the latter paper, however, the values of \ttt{efSearch} and \ttt{efConstruction} are set equal to \ttt{NN}.
 The idea of using values of \ttt{efSearch} and \ttt{efConstruction} potentially (much) larger than \ttt{NN}
 was proposed by Malkov and Yashunin \cite{Malkov2016}.
@@ -2989,14 +2988,15 @@ we use only a single sub-search, which is equivalent to setting \ttt{initIndexAt
 An outcome of a search in a layer is a set of data points that are close to the new point.
 Using one of the heuristics described by Malkov and Yashunin \cite{Malkov2016},
 we select points from this set to become neighbors of the new point (in the layer's graph).
-The choice of the heuristic is controlled by the parameter \ttt{delaunay\_type}.
-
 Note that unlike the older SW-graph, the new algorithm has a limit on the maximum number of neighbors.
 If the limit is exceeded, the heuristics are used to keep only the best neighbors.
 Specifically, the maximum number of neighbors in all layers but the ground layer is \ttt{maxM} (an index-time parameter,
 which is equal to \ttt{M} by default).
 The maximum number of neighbors for the ground layer is \ttt{maxM0} (an index-time parameter,
 which is equal to $2\times$\ttt{M} by default). 
+The choice of the heuristic is controlled by the parameter \ttt{delaunay\_type}.
+For high recall values ($>99$\%) the good value is 1. Otherwise, the value of 0 is a good choice (which
+also leads to shorter indexing times).
 
 A search algorithm is similar to the indexing algorithm. 
 It starts from the maximum-level layer and proceeds to lower-level layers by searching one layer at a time.
@@ -3123,7 +3123,8 @@ release/experiment \
  
 \ttt{efConstruction}      & The depth of the search that is used to find neighbors during indexing (this parameter
                             is used only for the search in the ground layer). \\
-\ttt{delaunay\_type}      & A type of the pruning heuristic (we do not recommend changing this value). \\
+\ttt{delaunay\_type}      & A type of the pruning heuristic: 0 indicates that we keep only \ttt{maxM} (or \ttt{maxM0} for the ground layer)
+                            neighbors, 1 activates a heuristic described by Algorithm 4 \cite{malkov2014}  \\
 
 \cmidrule(l){1-2} 
 \multicolumn{2}{c}{\textbf{NN-descent} (\ttt{nndes}) \cite{dong2011efficient,malkov2012scalable,malkov2014}  }\\
@@ -3201,6 +3202,10 @@ release/experiment \
 \end{table}
 
 \section{Tuning Guidelines}\label{SectionTuningGuide}
+In the following subsections, we provide brief tuning guidelines.
+These guidelines are broad-brush: The user is expected to find
+optimal parameters through experimentation on some development data set.
+
 \subsection{NAPP}
 Generally, increasing the overall number of pivots \ttt{numPivot} helps to improve performance.
 However, using a large number of pivots leads to increased indexing times. 
@@ -3233,7 +3238,12 @@ it sometimes makes sense to increase the number of sub-searches rather than furt
 
 The recall values are also affected by parameters \ttt{NN} (for SW-graph) and \ttt{M} (HNSW).
 Increasing the values of these parameters (to a certain degree) leads to better recall and shorter retrieval times
-(at the expense of longer indexing time).  The reasonable range of values for these parameters is 5-100.
+(at the expense of longer indexing time).  
+For low and moderate recall values (e.g., 60-80\%) increasing these parameters may lead to longer retrieval times.
+The reasonable range of values for these parameters is 5-100.
+
+Finally, we note that for very high recall values ($>99$\%) setting \ttt{delaunay\_type} to 1 improves retrieval times.
+This comes at the expense of longer indexing times. Therefore, for lower recall values, we recommend using \ttt{delaunay\_type}=0.
 
 \section{Extending the code}\label{SectionExtend}
 It is possible to add new spaces and search methods.
