removing MAC from the list of currently supported systems.

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -290,7 +290,7 @@ The latter two methods are superseded by \ttt{proj\_incsort} and \ttt{proj\_vptr
 \subsection{Prerequisites}
 NMSLIB was developed and tested on 64-bit Linux.
 Yet, almost all the code can be built and run on 64-bit Windows (two notable exceptions are: LSHKIT and NN-Descent).
-It should also be possible to build the library on MAC OS.
+%It should also be possible to build the library on MAC OS.
 Building the code requires a modern C++ compiler that supports \mbox{C++11}.
 Currently, we support GNU C++ ($\ge4.7$), Intel compiler ($\ge14$), 
 Clang ($\ge3.4$), 
