adding D. Yashunin to the manual ack

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -4142,7 +4142,7 @@ and the Open Advancement of Question Answering Systems (OAQA) group~\footnote{\u
 We also thank 
 Lawrence Cayton for providing data sets (and allowing us to make them public);
 Nikita Avrelin for implementing the first version of the SW-graph;
-Yury Malkov for contributing a hierarchical modification of the SW-graph, 
+Yury Malkov and Dmitry Yashunin for contributing a hierarchical modification of the SW-graph, 
 as well as for guideliness for tuning the original SW-graph;
 David Novak for the suggestion to use external pivots in permutation algorithms;
 Daniel Lemire for contributing the implementation of the original Schlegel~et~al.~\cite{schlegel2011fast}
