minor latex/doc fix

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -3456,7 +3456,7 @@ template class SpaceDummy<float>;
 template class SpaceDummy<double>;
 \end{verbatim}
 
-\begin{table}[[!htbp]
+\begin{table}[!htbp]
 \caption{\label{FigDummySpace}A sample space class}
 \begin{verbatim}
 template <typename dist_t>
@@ -3657,7 +3657,7 @@ This can be done by using our macro \ttt{DISABLE\_COPY\_AND\_ASSIGN}.
 \subsection{Creating a search method}\label{SectionCreateMethod}
 
 %\newpage
-\begin{table}[[!htbp]
+\begin{table}[!htbp]
 \caption{\label{FigDummyMethod}A sample search method class}
 \begin{verbatim}
 template <typename dist_t>
