Improving Python notebooks (no ticket)

--- a/python_bindings/notebooks/search_dense_optim.ipynb
+++ b/python_bindings/notebooks/search_dense_optim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,8 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Just read the data\n",
@@ -29,8 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a held-out query data set\n",
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'indexThreadQty': 4, 'M': 15, 'efConstruction': 100, 'post': 0}\n"
+      "Index-time parameters {'efConstruction': 100, 'indexThreadQty': 4, 'M': 15, 'post': 0}\n"
      ]
     }
    ],
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -92,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +118,7 @@
        "9000"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,15 +131,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'indexThreadQty': 4, 'M': 15, 'efConstruction': 100}\n",
-      "Indexing time = 0.233778\n"
+      "Index-time parameters {'efConstruction': 100, 'indexThreadQty': 4, 'M': 15}\n",
+      "Indexing time = 0.298415\n"
      ]
     }
    ],
@@ -151,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -172,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN time total=0.025079 (sec), per query=0.000025 (sec), per query adjusted for thread number=0.000100 (sec)\n"
+      "kNN time total=0.025963 (sec), per query=0.000026 (sec), per query adjusted for thread number=0.000104 (sec)\n"
      ]
     }
    ],
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -203,8 +207,8 @@
      "output_type": "stream",
      "text": [
       "Computing gold-standard data\n",
-      "Brute-force preparation time 0.001082\n",
-      "brute-force kNN time total=0.222535 (sec), per query=0.000223 (sec)\n"
+      "Brute-force preparation time 0.001208\n",
+      "brute-force kNN time total=0.438362 (sec), per query=0.000438 (sec)\n"
      ]
     }
    ],
@@ -228,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.992800\n"
+      "kNN recall 0.991740\n"
      ]
     }
    ],
@@ -252,54 +256,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Save a meta index\n",
-    "index.saveIndex('dense_index.bin')"
+    "index.saveIndex('dense_index_optim.bin')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9000"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# Re-intitialize the library, specify the space, the type of the vector and add data points \n",
+    "# Re-intitialize the library, specify the space, the type of the vector.\n",
     "newIndex = nmslib.init(method='hnsw', space=space_name, data_type=nmslib.DataType.DENSE_VECTOR) \n",
-    "\n",
-    "newIndex.addDataPointBatch(data_matrix) "
+    "# For an optimized L2 index, there's no need to re-load data points, but this would be required for\n",
+    "# non-optimized index or any other methods different from HNSW (other methods can save only meta indices)\n",
+    "#newIndex.addDataPointBatch(data_matrix) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Re-load the index and re-run queries\n",
-    "newIndex.loadIndex('dense_index.bin')"
+    "newIndex.loadIndex('dense_index_optim.bin')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +303,7 @@
      "output_type": "stream",
      "text": [
       "Setting query-time parameters {'efSearch': 100}\n",
-      "kNN time total=0.027727 (sec), per query=0.000028 (sec), per query adjusted for thread number=0.000111 (sec)\n"
+      "kNN time total=0.022647 (sec), per query=0.000023 (sec), per query adjusted for thread number=0.000091 (sec)\n"
      ]
     }
    ],
@@ -326,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.992800\n"
+      "kNN recall 0.991740\n"
      ]
     }
    ],
