--- a/python_bindings/notebooks/search_dense_nonoptim.ipynb
+++ b/python_bindings/notebooks/search_dense_nonoptim.ipynb
@@ -13,7 +13,6 @@
     "import nmslib \n",
     "import time \n",
     "import math \n",
-    "from scipy.sparse import csr_matrix \n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -26,56 +25,13 @@
    },
    "outputs": [],
    "source": [
-    "# Just a function to read sparse data\n",
-    "def read_data(filename, max_qty = None): \n",
-    "    row = [] \n",
-    "    col = [] \n",
-    "    data = [] \n",
-    "    read_qty = 0 \n",
-    "    with open(filename,'r') as f:  \n",
-    "        read_num_ft = 0\n",
-    "        for line in f: \n",
-    "            x = line.replace(':', ' ').strip().split() \n",
-    "            if (len(x) % 2 != 0):\n",
-    "                raise(Exception('Poorly formated line %d in file %s' % (read_qty + 1, filename)))\n",
-    "            if (len(x) == 0): continue\n",
-    "            for i in range(0, len(x), 2):     \n",
-    "                row.append(read_qty) \n",
-    "                feat_id = int(x[i])\n",
-    "                read_num_ft = max(read_num_ft, feat_id + 1)\n",
-    "                col.append(feat_id) \n",
-    "                data.append(float(x[i+1])) \n",
-    "\n",
-    "            read_qty = read_qty+1 \n",
-    "            if max_qty != None and read_qty >= max_qty: break\n",
-    "            \n",
-    "    print('Read %d rows, # of features %d' %  (read_qty, read_num_ft))\n",
-    "    ft_mat = csr_matrix((numpy.array(data), (numpy.array(row), numpy.array(col))), \n",
-    "                         shape=(read_qty, read_num_ft)) \n",
-    "    return (read_qty, ft_mat)"
+    "# Just read the data\n",
+    "all_data_matrix = numpy.loadtxt('../../sample_data/final128_10K.txt')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read 5000 rows, # of features 100000\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Read data points\n",
-    "(all_qty, all_data_matrix) = read_data('../../sample_data/sparse_wiki_5K.txt') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# of queries 500, # of data points 4500\n"
+      "# of queries 1000, # of data points 9000\n"
      ]
     }
    ],
@@ -104,22 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set index parameters\n",
     "# These are the most important onese\n",
-    "M = 30\n",
+    "M = 15\n",
     "efC = 100\n",
     "\n",
     "num_threads = 4\n",
-    "index_time_params = {'M': M, 'indexThreadQty': num_threads, 'efConstruction': efC, 'post' : 0}"
+    "index_time_params = {'M': M, 'indexThreadQty': num_threads, 'efConstruction': efC, 'post' : 0,\n",
+    "                     'skip_optimized_index' : 1 # using non-optimized index!\n",
+    "                    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -131,13 +89,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Space name should correspond to the space name \n",
+    "# used for brute-force search\n",
+    "space_name='l2'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4500"
+       "9000"
       ]
      },
      "execution_count": 8,
@@ -147,7 +118,7 @@
    ],
    "source": [
     "# Intitialize the library, specify the space, the type of the vector and add data points \n",
-    "index = nmslib.init(method='hnsw', space='cosinesimil_sparse', data_type=nmslib.DataType.SPARSE_VECTOR) \n",
+    "index = nmslib.init(method='hnsw', space=space_name, data_type=nmslib.DataType.DENSE_VECTOR) \n",
     "index.addDataPointBatch(data_matrix) "
    ]
   },
@@ -160,8 +131,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'indexThreadQty': 4, 'post': 0, 'M': 30, 'efConstruction': 100}\n",
-      "Indexing time = 16.409487\n"
+      "Index-time parameters {'M': 15, 'indexThreadQty': 4, 'efConstruction': 100, 'skip_optimized_index': 1, 'post': 0}\n",
+      "Indexing time = 0.291947\n"
      ]
     }
    ],
@@ -192,7 +163,7 @@
     "efS = 100\n",
     "query_time_params = {'efSearch': efS}\n",
     "print('Setting query-time parameters', query_time_params)\n",
-    "index.setQueryTimeParams(query_time_params) "
+    "index.setQueryTimeParams(query_time_params)"
    ]
   },
   {
@@ -204,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN time total=2.378762 (sec), per query=0.004758 (sec), per query adjusted for thread number=0.019030 (sec)\n"
+      "kNN time total=0.037669 (sec), per query=0.000038 (sec), per query adjusted for thread number=0.000151 (sec)\n"
      ]
     }
    ],
@@ -228,8 +199,8 @@
      "output_type": "stream",
      "text": [
       "Computing gold-standard data\n",
-      "Brute-force preparation time 0.058578\n",
-      "brute-force kNN time total=2.372437 (sec), per query=0.004745 (sec)\n"
+      "Brute-force preparation time 0.001139\n",
+      "brute-force kNN time total=0.319399 (sec), per query=0.000319 (sec)\n"
      ]
     }
    ],
@@ -238,7 +209,7 @@
     "print('Computing gold-standard data')\n",
     "\n",
     "start = time.time()\n",
-    "sindx = NearestNeighbors(n_neighbors=K, metric='cosine', algorithm='brute').fit(data_matrix)\n",
+    "sindx = NearestNeighbors(n_neighbors=K, metric='l2', algorithm='brute').fit(data_matrix)\n",
     "end = time.time()\n",
     "\n",
     "print('Brute-force preparation time %f' % (end - start))\n",
@@ -254,13 +225,15 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.970280\n"
+      "kNN recall 0.993040\n"
      ]
     }
    ],
@@ -284,19 +257,17 @@
    "outputs": [],
    "source": [
     "# Save a meta index\n",
-    "index.saveIndex('sparse_index.bin')"
+    "index.saveIndex('dense_index_nonoptim.bin')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Re-intitialize the library, specify the space, the type of the vector\n",
-    "newIndex = nmslib.init(method='hnsw', space='cosinesimil_sparse', data_type=nmslib.DataType.SPARSE_VECTOR) "
+    "# Re-intitialize the library, specify the space, the type of the vector.\n",
+    "newIndex = nmslib.init(method='hnsw', space=space_name, data_type=nmslib.DataType.DENSE_VECTOR) "
    ]
   },
   {
@@ -307,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "4500"
+       "9000"
       ]
      },
      "execution_count": 16,
@@ -316,7 +287,7 @@
     }
    ],
    "source": [
-    "# For non-optimized indices we need to re-add data points\n",
+    "# For non-optimized indices or methods different from HNSW we DO need to re-add data points\n",
     "newIndex.addDataPointBatch(data_matrix) "
    ]
   },
@@ -329,7 +300,7 @@
    "outputs": [],
    "source": [
     "# Re-load the index and re-run queries\n",
-    "newIndex.loadIndex('sparse_index.bin')"
+    "newIndex.loadIndex('dense_index_nonoptim.bin')"
    ]
   },
   {
@@ -342,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "Setting query-time parameters {'efSearch': 100}\n",
-      "kNN time total=1.224607 (sec), per query=0.002449 (sec), per query adjusted for thread number=0.009797 (sec)\n"
+      "kNN time total=0.031991 (sec), per query=0.000032 (sec), per query adjusted for thread number=0.000128 (sec)\n"
      ]
     }
    ],
@@ -368,7 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.970280\n"
+      "kNN recall 0.993040\n"
      ]
     }
    ],
@@ -382,6 +353,15 @@
     "recall = recall / query_qty\n",
     "print('kNN recall %f' % recall)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -389,18 +369,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
   }
  },
  "nbformat": 4,
